<resources>
    <string name="app_name">Comp4Me</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome</string>
    <string name="signup_text">Join Today</string>
    <string name="help_text">Help?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="security_hint">Answer</string>
    <string name="enter_email">Enter your email address</string>

    <string name="next_button">Next</string>
    <string name="enter_details">Sign up</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_password_again">Re-enter Password</string>
    <string name="birthday">DOB: </string>
    <string name="nationality">Nationality:  </string>


    <string name="login_button">LOG IN</string>

    <string name="signup_button">SIGN UP</string>
    <string name="error_password"></string>
    <string name="date_birthday"></string>
    <string name="prompted">choose country</string>
    <string name="sendBtn">Send</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!--List of Education-->
    <string-array name="education_history">
        <item>Any</item>
        <item>Further Education</item>
        <item>Higher Education</item>
        <item>None</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- User Interest -->
    <string name="user_interest">Tell us what you\'re into.</string>
    <string name="user_interest_music">Music</string>

    <!-- Forgot Password -->
    <string name="forgot_text">Forgot your password?</string>
    <string name="forgot_instructions">Enter your email address and we\'ll send you instructions on how to change your password.</string>
    <string name="forgot_send">Send</string>
    <string name="forgot_return">Return to login screen</string>
    <string name="title_activity_new_password">NewPassword</string>

    <!-- For Messaging -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
</resources>
