<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserProfile.Password.ForgotPassword"
    android:background="#03A9F4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:gravity="center"
            android:text="@string/forgot_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dip"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:text="@string/forgot_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/curved_corner"
            android:padding="5dp" />

        <TextView
            android:id="@+id/textfixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer to your secret question:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text" />

        <EditText
            android:id="@+id/editSecretAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:hint="Answer"
            android:background="@drawable/curved_corner"
            android:padding="5dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnForgotSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/forgot_send"
            android:background="@drawable/button_login" />

        <TextView
            android:id="@+id/forgot_backtoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClickReturnToLogin"
            android:text="@string/forgot_return"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
