<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:background="#0288D1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="100dp">

        <!--=================================================================================Logo-->
        <ImageView android:id="@+id/logo_img"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_margin="24dp"
            android:background="#0288D1"
            android:src="@drawable/finaltextlogo" />

        <!--Email-->
        <EditText android:id="@+id/emailBoxLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:background="@drawable/curved_corner"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_alignBottom="@+id/logo_img"
            android:layout_alignParentStart="true"

            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:textStyle="italic" />

        <!--Password-->
        <EditText android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:background="@drawable/curved_corner"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"

            android:layout_below="@+id/logo_img"
            android:layout_alignParentStart="true"
            android:typeface="normal"
            android:padding="10dp"
            android:textStyle="italic" />

        <!--Forget-->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"
            android:id="@+id/saveLoginCheckBox"
            android:layout_alignBottom="@+id/linearLayout3"
            android:checked="false"
            android:textColor="#FFFFFF"
            android:textStyle="italic" />

        <TextView android:id="@+id/help_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:gravity="center"
            android:textSize="20dp"
            android:clickable="true"
            android:contextClickable="true"

            android:textColor="#FFFFFF"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp"
            android:onClick="onClickHelp"
            android:textStyle="italic" />

        <!--=======================================================================Submit Section-->

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:touchscreenBlocksFocus="false">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@drawable/button_login"
            android:layout_gravity="bottom|center"
            android:textColor="#727272"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:id="@+id/btn_signUp"
            android:layout_weight="1"
            android:textColor="#727272"
            android:background="@drawable/button_signup"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dip"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="10dip"
            android:onClick="registerNewUser" />
    </LinearLayout>


</RelativeLayout>
