<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterUser"
    android:background="#03A9F4">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_text"
        android:id="@+id/textView2"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dip"
            android:id="@+id/fourthRegLayout"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/error_message"
                android:layout_gravity="center"
                android:text="@string/error_password"

                android:textSize="20dp"

                android:layout_weight="0.04"
                android:textColor="#fa4a53"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"

                />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordBoxSignup1"

                    android:hint="@string/password_hint"
                    android:background="@drawable/curved_corner"
                    android:padding="10dp"

                    android:layout_margin="3dp"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordBoxSignup2"
                    android:hint="@string/enter_password_again"
                    android:background="@drawable/curved_corner"
                    android:padding="10dp"

                    android:layout_margin="3dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select a Security Question:"
                    android:textColor="#FFFFFF"
                    android:layout_margin="3dp"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerSecretQuestion"
                    android:background="@drawable/curved_corner"
                    android:padding="10dp"
                    android:layout_margin="3dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer_atregister"
                    android:background="@drawable/curved_corner"
                    android:padding="10dp"
                    android:inputType="textPersonName"

                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:id="@+id/btn4Back"
                    android:background="@drawable/button_login"
                    android:textColor="#727272"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="Sign UP"
                    android:id="@+id/btnSaveChanges"
                    android:background="@drawable/button_login"
                    android:textColor="#727272"


                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dip"
            android:id="@+id/secondRegLayout"
            android:visibility="invisible">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curved_corner"
                    android:padding="10dp"

                    android:layout_above="@+id/linearLayout6"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="3dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/nationality"
                        android:id="@+id/textView3"
                        android:gravity="center"
                        android:textStyle="italic" />

                    <Spinner


                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:id="@+id/Nationality"

                        android:prompt="@string/prompted"

                        android:layout_weight="2" />
                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_corner"
                android:padding="10dp"
                android:id="@+id/linearLayout6"
                android:layout_above="@+id/linearLayout5"
                android:layout_alignParentStart="true"
                android:layout_margin="3dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Country:     "
                    android:id="@+id/textCountry"
                    android:gravity="center"
                    android:textStyle="italic" />

                <Spinner


                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:id="@+id/country_register"

                    android:prompt="@string/prompted"

                    android:layout_weight="2" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_corner"
                android:padding="10dp"

                android:id="@+id/linearLayout5"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="3dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="City:            "
                    android:id="@+id/textCity"
                    android:gravity="center"
                    android:textStyle="italic" />

                <Spinner


                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:id="@+id/city_register"

                    android:prompt="@string/prompted"

                    android:layout_weight="2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/curved_corner"

                android:id="@+id/linearLayout4"
                android:layout_below="@+id/linearLayout5"
                android:layout_alignParentEnd="true"
                android:layout_margin="3dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Education:"
                    android:textSize="17dp"
                    android:textStyle="italic" />

                <Spinner
                    android:id="@+id/edu_spinner_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout7">

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:id="@+id/btn2Back"
                    android:background="@drawable/button_login"
                    android:textColor="#727272"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:id="@+id/btn2Next"
                    android:background="@drawable/button_login"
                    android:textColor="#727272"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp" />


            </LinearLayout>

        </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dip"
                android:id="@+id/firstRegLayout"
                android:visibility="visible">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/emailBoxSignup"
                        android:hint="@string/email_hint"
                        android:background="@drawable/curved_corner"
                        android:padding="10dp"

                        android:layout_below="@+id/textView2"
                        android:layout_alignParentStart="true"

                        android:layout_margin="3dp"
                        android:textStyle="italic" />


                    <EditText
                        android:background="@drawable/curved_corner"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/txtFirstName"
                        android:hint="First Name"
                        android:padding="10dp"

                        android:layout_weight="1"
                        android:textStyle="italic"
                        android:layout_margin="3dp"/>

                    <EditText
                        android:background="@drawable/curved_corner"
                        android:layout_margin="3dp"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/txtLastName"
                        android:hint="Last Name"

                        android:layout_weight="1"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/curved_corner"
                        android:padding="10dp"
                        android:layout_margin="3dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender:     "
                            android:textSize="17dp"
                            android:textStyle="italic" />

                        <Spinner
                            android:id="@+id/gender_spinner_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/curved_corner"
                        android:layout_margin="3dp">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/birthday"
                            android:id="@+id/text_birthday"
                            android:layout_weight="1.46"

                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/birthday"
                            android:layout_weight="2"
                            android:text="@string/date_birthday"
                            android:padding="10dp"
                            android:focusable="true"
                            android:clickable="true"
                            android:onClick="setDate"
                            android:focusableInTouchMode="true"
                            android:gravity="center" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" >

                    <Button
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="Back"
                        android:id="@+id/btn1Back"
                        android:background="@drawable/button_login"
                        android:textColor="#727272"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp" />

                    <Button
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="Next"
                        android:id="@+id/btn1Next"
                        android:background="@drawable/button_login"
                        android:textColor="#727272"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
